--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PASS=squid
 DB_PORT=23798
 PROCESSOR_PROMETHEUS_PORT=3333
 GQL_PORT=4350
+WEBSOCKET_URL=ws://127.0.0.1:9944
+ARCHIVE_URL=http://127.0.0.1:8888/graphql
