*updated repository ref in helm chart

--- a/deployment/helm-chart/values.yaml
+++ b/deployment/helm-chart/values.yaml
@@ -13,7 +13,7 @@ processor:
   replicaCount: 1
 
   image:
-    repository: okalenyk
+    repository: societal
     tag: latest
     name: node-indexer
     pullPolicy: Always
@@ -97,7 +97,7 @@ queryNode:
   replicaCount: 1
 
   image:
-    repository: okalenyk
+    repository: societal
     tag: latest
     name: node-indexer
     pullPolicy: Always
