--- a/deployment/helm-chart/values.yaml
+++ b/deployment/helm-chart/values.yaml
@@ -241,6 +241,9 @@ archiveGateway:
     port: 80
     targetPort: 8000
 
+  ingress:
+    host: "gateway.dev.sctl.link"
+
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
