*using git tag for docker images

--- a/.github/actions/docker-build-publish/action.yaml
+++ b/.github/actions/docker-build-publish/action.yaml
@@ -19,6 +19,7 @@ runs:
       tags: |
         type=raw,value=latest
         type=raw,value=${{ env.DOCKER_ENV_TAG }}
+        type=raw,value=${{ env.RELEASE_VERSION }}
         type=ref,event=branch,suffix=-latest
         type=sha,prefix=,format=long
 
